2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditNote.py: empty_object() add extratype to object
	0001476: Opening the new note dialog/editor and cancelling shouldn't ask 
	to save changes. there are no changes 

2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DbManager.py: rename glade variable to glade_xml_file

2008-02-25 Frederik De Richter <frederik.de.richter@pandora.be>
	* src/plugins/SoundGen.py
	links to wiki manual 

2008-02-27 Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py:
	Don't allow newer Gramps files to be imported (#0001722).

2008-02-27 Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/GVFamilyLines.py:
	0001549: use standard date formats for FamilyLines

2008-02-26 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001828: update cli handling of new options. (new in 3.0?)

2008-02-26 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001835: cli crashes for all reports. NoneType has no attribute 
	get_gramps_id

2008-02-26 Benny Malengier <benny.malengier@gramps-project.org>
    * src/ScratchPad.py: bug when dragging sourceref #1833
    * src/GrampsDisplay.py: remove whitespace

2008-02-26 Peter Landgren <peter.talken@telia.com>
    * src/plugins/FanChart.py: Fix for printing in landscape issue #1753

2008-02-25 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	* src/ArgHandler.py:
	* src/ReportBase/_CommandLineReport.py:
	Improvements to CLI reports - 
	0001824: Bug in command line - gramps does not show right error.
	0001821: A command "python src/gramps.py --open=DG1 --action=report" cause 
	a crash
	Fix help strings.

2008-02-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DateHandler/_DateParser.py: set year += 1
	* src/gen/lib/date.py: removed slash-date fix
	* src/gen/lib/test/date_test.py: slash dates sort correctly
