@@ -1,3 +1,7 @@
+2008-02-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/DefaultGramplets.py: new Pedigree Gramplet
+	* src/DataViews/GrampletView.py: added help button on undocked windows
+
 2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
 	* src/Editors/_EditNote.py: empty_object() add extratype to object
 	0001476: Opening the new note dialog/editor and cancelling shouldn't ask 
